--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
     <title>Tic Tac Toe</title>
   </head>
   <body>
-    <header>
+    <header id="main-header">
       <h1>Play Tic Tac Toe</h1>
       <p>Build with HTML, CSS, JavaScript and - of course - lots of love!</p>
     </header>
     <main>
       <aside>
-        <h2>Choose your name</h2>
+        <header>
+          <h2>Choose your name</h2>
+        </header>
         <form>
           <div>
             <label for="playername">Player name</label>
