--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/styles/styles.css" />
+    <link rel="stylesheet" href="/styles/overlays.css" />
     <title>Tic Tac Toe</title>
   </head>
   <body>
@@ -12,7 +13,7 @@
       <p>Build with HTML, CSS, JavaScript and - of course - lots of love!</p>
     </header>
     <main>
-      <aside>
+      <aside class="modal">
         <header>
           <h2>Choose your name</h2>
         </header>
