--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <title>Tic Tac Toe</title>
   </head>
   <body>
+    <div id="backdrop"></div>
     <header id="main-header">
       <h1>Play Tic Tac Toe</h1>
       <p>Build with HTML, CSS, JavaScript and - of course - lots of love!</p>
     </header>
     <main>
-      <aside class="modal">
+      <aside class="modal" id="config-overlay">
         <header>
           <h2>Choose your name</h2>
         </header>
