styling config-overlay

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/styles/styles.css" />
     <link rel="stylesheet" href="/styles/overlays.css" />
+    <link rel="stylesheet" href="/styles/configuration.css" />
     <title>Tic Tac Toe</title>
   </head>
   <body>
@@ -19,7 +20,7 @@
           <h2>Choose your name</h2>
         </header>
         <form>
-          <div>
+          <div class="form-control">
             <label for="playername">Player name</label>
             <input type="text" name="username" id="playername" />
           </div>
