--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/styles/styles.css" />
     <link rel="stylesheet" href="/styles/overlays.css" />
     <link rel="stylesheet" href="/styles/configuration.css" />
+    <link rel="stylesheet" href="/styles/game.css" />
     <title>Tic Tac Toe</title>
   </head>
   <body>
@@ -51,9 +52,9 @@
         </ol>
         <button class="btn">Start New Game</button>
       </section>
-      <section id="acive-game">
-        <article>
-          <h3>You won! <span id="winner-name">PLAYER NAME</span></h3>
+      <section id="active-game">
+        <article id="game-over">
+          <h2>You won! <span id="winner-name">PLAYER NAME</span></h2>
           <p>Click "Start New Game" above, to start a new game</p>
         </article>
 
