--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
 
         <p>It's your turn <span id="active-player-name">PLAYER NAME</span></p>
 
-        <ol>
+        <ol id="game-board">
           <li></li>
-          <li></li>
+          <li class="disabled">X</li>
           <li></li>
 
-          <li></li>
+          <li class="disabled">O</li>
           <li></li>
           <li></li>
 
