--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/styles/overlays.css" />
     <link rel="stylesheet" href="/styles/configuration.css" />
     <link rel="stylesheet" href="/styles/game.css" />
-    <script src="/scripts/config.js" defer></script>
+    <script src="/scripts/configuration.js" defer></script>
     <script src="/scripts/game.js" defer></script>
     <script src="/scripts/app.js" defer></script>
     <title>Tic Tac Toe</title>
@@ -26,10 +26,11 @@
         <form>
           <div class="form-control">
             <label for="playername">Player name</label>
-            <input type="text" name="username" id="playername" />
+            <input type="text" name="username" id="playername" required />
           </div>
+          <p id="config-errors"></p>
           <div>
-            <button type="button" class="btn btn-alt" id="cancel-config-btn">
+            <button type="reset" class="btn btn-alt" id="cancel-config-btn">
               Cancel
             </button>
             <button type="submit" class="btn">Confirm</button>
